# code-generator

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logger.py  prompts.py
backend/app/models/: schemas.py
backend/app/services/: chembl_sql_agent.py  chembl_sql_exec.py  chembl_sql_pipeline.py  code_review_controller.py  github_app.py  llm_model.py  rag_model.py
backend/codegen_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .env.example  .vite.config.local.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts  modules.d.ts  monaco-setup.ts  monaco.d.ts  router.d.ts  router.ts  shims-monaco.d.ts  styles.css  vuetify.d.ts
frontend/src/components/: GlobalNotifier.vue  GlowAura.vue  HeroBackdrop.vue  PageTitle.vue  SendButton.vue
frontend/src/lib/: http.ts  index.ts
frontend/src/modules/: index.ts
frontend/src/modules/FPF-chatbot/: FpfChatbotApp.vue
frontend/src/modules/FPF-rag/: FpfRagApp.vue
frontend/src/modules/about/: AboutMe.vue
frontend/src/modules/chembl-agent/: ChemblAgentApp.vue
frontend/src/modules/chembl-sql-rag/: ChemblSqlRagApp.vue
frontend/src/pages/: HomePage.vue  NotFound.vue
frontend/src/plugins/: global-notifier.ts
frontend/src/stores/: apiKey.ts  notify.ts
frontend/src/types/: aliases.d.ts
(+2 files in other folders)
